...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a43-Xh-4Ey">
                                <rect key="frame" x="178" y="771" width="58" height="53"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="53" id="Fs7-sI-sYG"/>
                                    <constraint firstAttribute="width" constant="58" id="OVn-qe-e2s"/>
                                </constraints>
                                <state key="normal" title="Add Patient" image="add_button"/>
                                <connections>
                                    <segue destination="WGN-vh-d0b" kind="presentation" id="C5D-rE-rKf"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <items>
                                    <navigationItem title="Patient Details" id="i8n-1v-w5x">
                                        <barButtonItem key="leftBarButtonItem" style="plain" id="rAB-yU-7jw">
                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Bwh-Jr-cJh">
                                                <rect key="frame" x="20" y="7" width="34" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Back"/>
                                                <connections>
                                                    <segue destination="W1g-k7-jlC" kind="presentation" id="phZ-Kl-euV"/>
                                                </connections>
                                            </button>
                                        </barButtonItem>
                                    </navigationItem>
...
                            <constraint firstItem="AmA-IU-dAB" firstAttribute="leading" secondItem="GgI-qv-I7p" secondAttribute="leading" constant="100" id="wED-dw-kUj"/>
                            <constraint firstItem="aJg-dA-HSs" firstAttribute="centerX" secondItem="P3w-12-vCU" secondAttribute="centerX" id="x2X-se-2UX"/>
                            <constraint firstItem="AmA-IU-dAB" firstAttribute="top" secondItem="aJg-dA-HSs" secondAttribute="bottom" constant="9" id="yfU-Pf-CjG"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="GgI-qv-I7p"/>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="O0Q-L0-sqA"/>
                    <connections>
                        <outlet property="PatientAge" destination="NR5-dv-Tti" id="0XC-k1-Xzd"/>
                        <outlet property="PatientFirstName" destination="7Ri-eU-4qT" id="I9j-HK-XY3"/>
                        <outlet property="PatientLastName" destination="A2x-ez-A6p" id="CZs-65-jVq"/>
                        <outlet property="RoutinesTable" destination="jCP-Q1-ISo" id="nRP-My-epH"/>
                        <segue destination="7fC-8v-7G8" kind="presentation" identifier="ToTempExercise" id="wKe-NC-KvX"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vu1-Fd-5y4">
                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                <items>
                                    <navigationItem title="Add New Patient" id="qgf-kc-XpX">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="agZ-ZU-w7E">
                                            <connections>
                                                <segue destination="oA7-8m-u0l" kind="unwind" identifier="cancelSegue" unwindAction="cancelWithSegue:" id="9f1-N8-vyj"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" id="ShM-3X-Rzs">
                                            <connections>
                                                <segue destination="oA7-8m-u0l" kind="unwind" identifier="doneSegue" unwindAction="doneWithSegue:" id="BxD-wj-88I"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ArmRaise" translatesAutoresizingMaskIntoConstraints="NO" id="bKX-yf-g4B">
                                <rect key="frame" x="57" y="213" width="300" height="234"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="bKX-yf-g4B" secondAttribute="height" multiplier="50:39" id="5iP-bx-Q6D"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arm Raise" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0K-Sa-Hbd">
                                <rect key="frame" x="142" y="472" width="130.5" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zkx-Qc-Kw5" customClass="CheckBox" customModule="StabilityLink12" customModuleProvider="target">
...
