...
                                        <connections>
                                            <segue destination="qcb-Wy-ntU" kind="show" id="abi-mQ-MoE"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tKl-Sv-HBB" customClass="SLButton" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="433" width="335" height="40"/>
                                        <state key="normal" title="Log In"/>
                                        <connections>
                                            <segue destination="TQt-AF-Agz" kind="show" id="JY7-oO-L4H"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="92U-2d-YNE" customClass="SLTextField" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="188" width="275" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQH-m5-PaG" customClass="SLTextField" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="235" width="275" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lAY-vG-ydn" customClass="SLTextField" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="282" width="275" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VbS-Mz-bYK" customClass="SLButton" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="329" width="275" height="30"/>
...
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKk-dc-sHk" customClass="SLButton" customModule="StabilityLink12" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="172" width="295" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="gDF-ty-3W8"/>
                                        </constraints>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="loginTapped:" destination="TQt-AF-Agz" eventType="touchUpInside" id="9qr-9F-ZuV"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJV-aU-7am">
                                        <rect key="frame" x="0.0" y="258" width="295" height="65"/>
...
