...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Default Values
        SetsTitle.text = "Sets:"
        RepsTitle.text = "Reps:"
        FeedbackLabel.text = "Feedback:"
        
        // Set Images
        ExerciseImage.image = UIImage(named: ("\(physioTapsExercise)" + ".png"))
        ExerciseDescription.image = UIImage(named: ("Old" + "\(physioTapsExercise)" + ".png"))
        
...
