...
        super.viewDidLoad()

        self.ExerciseTable.register(UITableViewCell.self, forCellReuseIdentifier: "ExerciseCell")
        self.ExerciseTable.tableFooterView = UIView()
        
        // Set Button Title
        ViewStats.setTitle("Statistics", for: .normal)
        
        
        ExerciseTable.delegate = self
        ExerciseTable.dataSource = self
        self.ref = Database.database().reference()
        self.ref?.child("users").child(currentPatient).child("routines").child(selectedRoutine).observeSingleEvent(of:DataEventType.value, with: { (snapshot) in
...
